--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           pip install -r tests/requirements.txt
 
       - name: Run tests
-        run: pytest
+        run: PYTHONPATH=. pytest
 
   docker:
     needs: build-test
@@ -34,11 +34,11 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: beaverwithknife
+          password: dckr_pat_z-MfNBuV6I8yQw9UsYM4rXnnkFw
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-python-app .
+        run: docker build -t beaverwithknife/my-python-app .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-python-app
+        run: docker push beaverwithknife/my-python-app
