--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           pip install -r tests/requirements.txt
 
       - name: Run tests
-        run: PYTHONPATH=. pytest
+        run: pytest
 
   docker:
     needs: build-test
@@ -38,7 +38,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ${{beaverwithknife}}/my-python-app .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-python-app .
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-python-app
