--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,4 @@ jobs:
         run: docker buildx build --load -t beaverwithknife/my-python-app .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-python-app
+        run: docker push beaverwithknife/my-python-app
